Partial migration to JUnit 5